<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/currentPlayer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:text="@string/aktualny_gracz"
                android:textAlignment="center"
                android:textSize="14sp" />

            <LinearLayout
                android:id="@+id/layout_0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_0_0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:insetLeft="6dp"
                    android:insetRight="6dp"
                    android:onClick="kliknieciePrzycisku"
                    android:textSize="30sp"
                    tools:text="@string/button_0_0" />

                <Button
                    android:id="@+id/button_0_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:insetLeft="6dp"
                    android:insetRight="6dp"
                    android:onClick="kliknieciePrzycisku"
                    android:textSize="30sp"
                    tools:text="@string/button_0_1" />

                <Button
                    android:id="@+id/button_0_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:insetLeft="6dp"
                    android:insetRight="6dp"
                    android:onClick="kliknieciePrzycisku"
                    android:textSize="30sp"
                    tools:text="@string/button_0_2" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_1_0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:insetLeft="6dp"
                    android:insetRight="6dp"
                    android:onClick="kliknieciePrzycisku"
                    android:textSize="30sp"
                    tools:text="@string/button_1_0" />

                <Button
                    android:id="@+id/button_1_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:insetLeft="6dp"
                    android:insetRight="6dp"
                    android:onClick="kliknieciePrzycisku"
                    android:textSize="30sp"
                    tools:text="@string/button_1_1" />

                <Button
                    android:id="@+id/button_1_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:insetLeft="6dp"
                    android:insetRight="6dp"
                    android:onClick="kliknieciePrzycisku"
                    android:textSize="30sp"
                    tools:text="@string/button_1_2" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_2_0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:insetLeft="6dp"
                    android:insetRight="6dp"
                    android:onClick="kliknieciePrzycisku"
                    android:textSize="30sp"
                    tools:text="@string/button_2_0" />

                <Button
                    android:id="@+id/button_2_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:insetLeft="6dp"
                    android:insetRight="6dp"
                    android:onClick="kliknieciePrzycisku"
                    android:textSize="30sp"
                    tools:text="@string/button_2_1" />

                <Button
                    android:id="@+id/button_2_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:insetLeft="6dp"
                    android:insetRight="6dp"
                    android:onClick="kliknieciePrzycisku"
                    android:textSize="30sp"
                    tools:text="@string/button_2_2" />
            </LinearLayout>

            <TextView
                android:id="@+id/gameResult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:text="@string/wynik"
                android:textAlignment="textStart"
                android:textSize="14sp" />

            <Button
                android:id="@+id/buttonPlayAgain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="16dp"
                android:onClick="playAgain"
                android:text="@string/zagraj_ponownie" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>